--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Setup node 12
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12.x
+      - run: npm ci
+
+      - uses: actions/checkout@v2
+      
       - name: Run entrypoint.sh
         run: sh ./entrypoint.sh
