fix2: alt rxxr2 build using git

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,17 +9,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
     steps:
       - uses: actions/checkout@v2
-
-      - name: Setup node 12
-        uses: actions/setup-node@v2
+      - name: Build on Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-      - run: npm ci
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci --ignore-scripts
 
       - uses: actions/checkout@v2
-      
       - name: Run entrypoint.sh
         run: sh ./entrypoint.sh
