--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm init
+      - run: npm init temp --yes
       - run: npm ci --ignore-scripts
 
       - uses: actions/checkout@v2
