--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -6,6 +6,7 @@ jobs:
   myjob:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Check files in container
     - run: ls -al
     - run: git diff --name-only
