--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -1,12 +1,17 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
-  myjob:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Check files in container
-    - run: ls -al
-    - run: git diff --name-only
+      run: |
+        ls -al
+        git diff --name-only
