--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Scan changed files for ReDoS vulnerabilities 
 
 on:
   push:
@@ -9,10 +9,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
-    - uses: actions/checkout@v2
-    - name: Check files in container
-      run: |
-        ls -al
-        git diff --name-only
-        sh ./entrypoint.sh
+      - uses: actions/checkout@v2
+      - name: Build on Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm init --yes
+
+      - uses: actions/checkout@v2
+      - name: Run entrypoint.sh
+        run: sh ./entrypoint.sh
