test: hello world

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -22,4 +22,6 @@ jobs:
 
       - uses: actions/checkout@v2
       - name: Run entrypoint.sh
-        run: sh ./entrypoint.sh
+        run: |
+          sh ./entrypoint.sh
+          echo 'Hello, World!'
