--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -23,5 +23,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run entrypoint.sh
         run: |
-          sh ./entrypoint.sh
           echo 'Hello, World!'
+          git show --name-only
