--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -21,7 +21,8 @@ jobs:
       - run: npm init --yes
 
       - uses: actions/checkout@v2
-
+        with:
+          fetch-depth: '0'
       - name: Run entrypoint.sh
         run: |
           sh ./entrypoint.sh
