--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -27,3 +27,4 @@ jobs:
         run: |
           echo "$GITHUB_BASE_REF"
           echo "$GITHUB_HEAD_REF"
+          git diff --name-only "$GITHUB_BASE_REF" "$GITHUB_HEAD_REF"
