test: github action variables

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -25,4 +25,4 @@ jobs:
           fetch-depth: '0'
       - name: Run entrypoint.sh
         run: |
-          git diff --name-only HEAD^ HEAD
+          git show --name-only --pretty=format:
