test: using docker hub

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    services:
+      vrd:
+        image: mdenzo/vuln-regex-detector
+        
     strategy:
       matrix:
         node-version: [14.x]
