--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -35,4 +35,7 @@ jobs:
           
       - name: Run entrypoint.sh
         run: |
+          prinvenv | grep "VULN"
+          printenv
+          ls
           sh entrypoint.sh
