--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -13,27 +13,9 @@ jobs:
     services:
       vrd:
         image: mdenzo/vuln-regex-detector:1.0.0
-        ports:
-          - 5432/tcp
-
-        strategy:
-          matrix:
-            node-version: [14.x]
-        steps:
-          - uses: actions/checkout@v2
-          - name: Build on Node.js ${{ matrix.node-version }}
-            uses: actions/setup-node@v1
-            with:
-              node-version: ${{ matrix.node-version }}
-          - run: npm init --yes
-
-          - uses: actions/checkout@v2
-            with:
-              fetch-depth: '0'
-            env:
-              VULN_REGEX_DETECTOR_ROOT: ${{ job.services.vrd.ports[5432] }}
-              
-          - name: Run entrypoint.sh
-            run: |
-              ls
-              printenv
+      steps:
+          - name: Test env
+          run: |
+            pwd
+            ls
+            printenv
