--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -7,7 +7,8 @@ jobs:
     container:
       image: mdenzo/vuln-regex-detector:1.0.0
     steps:
-         - name: Test env
+        - name: Test env
+          uses: actions/checkout@v1
            run: |
              node -v
              pwd
