test: run inside container

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -1,18 +1,31 @@
-name: container
+name: Scan for redos
 on: push
 
 jobs:
-  node-docker:
+  build:
     runs-on: ubuntu-latest
-    container:
-      image: mdenzo/vuln-regex-detector:1.0.0
+
     steps:
-        - name: Test env
           uses: actions/checkout@v1
 
-        - name: Run a few commands
+        - name: Scan changed files
           run: |
-             node -v
-             pwd
-             ls
-             printenv
+            CHANGED_FILES=`git diff --name-only HEAD^ HEAD | grep -v "^src/validate*"`
+            echo $CHANGED_FILES
+            mkdir -p changed-files
+
+            for i in ${CHANGED_FILES}
+              do
+                cp "$i" "changed-files/$i"
+              done
+
+            git clone davisjam/vuln-regex-detector
+            docker build -t vrd:latest ./vuln-regex-detector/.
+            docker run -tpvd changed-files:app/changed-files --name vrd:latest
+            docker exec --name vrd:latest "apt install -y jq"
+            
+            for i in ${CHANGED_FILES}
+              do
+                echo '{"file":"./changed-files/'$i'"}' > changed-files/repo.json;    
+                docker exec vrd:latest "perl ./bin/check-file.pl ./changed-files/repo.json > repo-out.json ; cat repo-out.json | jq -r '.vulnRegexes'"
+              done
