test: run inside container

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -21,7 +21,7 @@ jobs:
 
             for i in ${CHANGED_FILES}
               do
-                cp "$i" "changed-files/$i"
+                rsync -a "$i" "changed-files/$i"
               done
 
             git clone davisjam/vuln-regex-detector
