--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -21,6 +21,7 @@ jobs:
 
             for i in ${CHANGED_FILES}
               do
+                echo $i
                 rsync -a "$i" "changed-files/$i"
               done
 
