--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -24,7 +24,7 @@ jobs:
             for i in ${CHANGED_FILES}
               do
                 echo $i
-                rsync -a $i changed-files/$i
+                rsync $i changed-files/$i
               done
 
             git clone davisjam/vuln-regex-detector
