test: run inside container

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -25,6 +25,7 @@ jobs:
               do
                 echo $i
                 cd changed-files
+                echo `pwd`
                 rsync $i .
                 cd ..
               done
