test: run inside container

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -26,7 +26,7 @@ jobs:
                 echo $i
                 cd changed-files
                 echo `pwd`
-                rsync $i .
+                rsync -a $i .
                 cd ..
               done
 
