--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -2,9 +2,9 @@ name: Vulnerable regex detector
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
   workflow_dispatch:
 
