--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -18,5 +18,4 @@ jobs:
       - name: Run entrypoint.sh
         run: |
           git log
-          git diff --name-only HEAD^ HEAD
-          sh ./entrypoint.sh
+          git diff-tree --no-commit-id --name-only -r GITHUB_SHA
