test: $GITHUB_SHA

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Run entrypoint.sh
         run: |
           git log
-          git diff-tree --no-commit-id --name-only -r GITHUB_SHA
+          git diff-tree --no-commit-id --name-only -r $GITHUB_SHA
