test: $GITHUB_SHA

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -17,5 +17,5 @@ jobs:
 
       - name: Run entrypoint.sh
         run: |
-          git log
+          echo $GITHUB_SHA
           git diff-tree --no-commit-id --name-only -r $GITHUB_SHA
