--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -18,4 +18,7 @@ jobs:
       - name: Run entrypoint.sh
         run: |
           echo $GITHUB_SHA
+          echo $GITHUB_BASE_REF
+          echo $GITHUB_HEAD_REF
           git diff-tree --no-commit-id --name-only -r $GITHUB_SHA
+          git diff --name-only "$GITHUB_BASE_REF".."$GITHUB_HEAD_REF"
