test: git diff-tree --no-commit-id -r $GITHUB_SHA

--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -16,9 +16,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run entrypoint.sh
-        run: |
-          echo $GITHUB_SHA
-          echo $GITHUB_BASE_REF
-          echo $GITHUB_HEAD_REF
-          git diff-tree --no-commit-id -r $GITHUB_SHA
-          git diff "$GITHUB_BASE_REF".."$GITHUB_HEAD_REF"
+        run: sh ./entrypoint.sh
