--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -16,4 +16,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run entrypoint.sh
-        run: sh ./entrypoint.sh
+        run: |
+          chmod +x ./entrypoint.sh
+          ./entrypoint.sh
+        shell: bash
