--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -14,7 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+        with: 
+          fetch-depth: '0'
+          
       - name: Run entrypoint.sh
         run: |
           chmod +x ./entrypoint.sh
