--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -16,9 +16,8 @@ jobs:
       - uses: actions/checkout@v2
         with: 
           fetch-depth: '0'
-          
+
       - name: Run entrypoint.sh
         run: |
-          chmod +x ./entrypoint.sh
-          ./entrypoint.sh
+          echo $GITHUB_SHA
         shell: bash
