--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Scan for redos
-        uses: meekdenzo/vrd@v1.0.0
+        uses: meekdenzo/vrd@v1.0.0-beta2
