--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -16,5 +16,7 @@ jobs:
         with: 
           fetch-depth: '0'
           
-      - name: Scan for redos
-        uses: meekdenzo/vrd@v1.0.2
+      run: |
+        chmod +x ./entrypoint.sh
+        ./entrypoint.sh
+
