--- a/.github/workflows/test-job.yml
+++ b/.github/workflows/test-job.yml
@@ -15,7 +15,8 @@ jobs:
         uses: actions/checkout@v2
         with: 
           fetch-depth: '0'
-          
+
+      - name: Scan 
         run: |
           chmod +x ./entrypoint.sh
           ./entrypoint.sh
